kubernetes-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce-app
  labels:
    app: ecommerce
    environment: dev
