kubernetes-manifests/backend-account-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-account-deployment
  namespace: ecommerce-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-account-deployment
  template:
    metadata:
      labels:
        app: backend-account-deployment
    spec:
      containers:
        - name: backend-account-deployment-container
          image: sujalsharma/backend-account-deployment:v1
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: backend-account-volume
              mountPath: /data # Path inside the container where the volume is mounted
      volumes:
        - name: backend-account-volume
          persistentVolumeClaim:
            claimName: backend-account-pvc
