kubernetes-manifests/backend-graphql-v1.yaml
# graphql-v1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-graphql-v1
  namespace: ecommerce-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-graphql
      version: v1
  template:
    metadata:
      labels:
        app: backend-graphql
        version: v1
    spec:
      containers:
        - name: backend-graphql
          image: sujalsharma/backend-graphql-deployment:v1
          ports:
            - containerPort: 8080
