kubernetes-manifests/backend-graphql-v2.yaml
# graphql-v2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-graphql-v2
  namespace: ecommerce-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-graphql
      version: v2
  template:
    metadata:
      labels:
        app: backend-graphql
        version: v2
    spec:
      containers:
        - name: backend-graphql
          image: sujalsharma/backend-graphql-deployment:v2
          ports:
            - containerPort: 8080
