kubernetes-manifests/elasticSearch-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: backend-elasticsearch-statefulset
  namespace: ecommerce-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-elasticsearch
  serviceName: "backend-elasticsearch-service" # Required for StatefulSets
  template:
    metadata:
      labels:
        app: backend-elasticsearch
    spec:
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:6.2.4
          ports:
            - containerPort: 9200
              name: http
            - containerPort: 9300
              name: transport
          volumeMounts:
            - name: backend-elasticSearch-volume
              mountPath: /data # Path inside the container where the volume is mounted
      volumes:
        - name: backend-elasticSearch-volume
          persistentVolumeClaim:
            claimName: ebs-claim-elasticSearch
