kubernetes-manifests/catalog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-catalog-service
spec:
  selector:
    app: backend-catalog-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
