kubernetes-manifests/graphql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-graphql-service
spec:
  selector:
    app: backend-graphql-deployment # Match Deployment label
  ports:
    - protocol: TCP
      port: 80          # External port
      targetPort: 8080  # Container port
  type: LoadBalancer
