kubernetes-manifests/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-order-service
spec:
  selector:
    app: backend-order-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
