kubernetes-manifests/graphql-virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: graphql-virtualservice
spec:
  hosts:
    - "*"  # Replace with your domain or use *
  gateways:
    - backend-graphql-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: backend-graphql-service.default.svc.cluster.local
            port:
              number: 80
